Refactor question bank UI to FXML and enhance question editing